# secure-clipboard-manager

./: .gitignore  BETA_RELEASE_CHECKLIST.md  BUILD_AND_TEST_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  DOCUMENTATION_INDEX.md  LICENSE  PHASE8_MASTER_REPORT.md  PHASE8_STEP1_TEST_REPORT.md  PHASE8_STEP2_IMPLEMENTATION.md  PHASE9_COMPLETION_REPORT.md  PHASE9_MASTER_SUMMARY.md  QUICK_START.md  README.md  SHIPMENT_STATUS.md  TEST_REPORT_CRASH_FIX.md  TODO-mac-appstore.md  build-app.sh  build-dmg-simple.sh  build-dmg.sh  build.rs  clipvault.rb  notes  output.txt  todo.md
.github/: FUNDING.yml
.github/workflows/: release.yml
benches/: benchmarks.rs
docs/: USER_GUIDE.md  index.html
resources/: AppIcon.icns  ICON_README.md  Info.plist  entitlements.plist  generate_icon.py
src/: lib.rs  main.rs
src/clipboard/: history.rs  mod.rs  monitor.rs  processor.rs
src/launcher/: main.rs
src/storage/: config.rs  database.rs  encryption.rs  license.rs  mod.rs  processor.rs  search.rs
src/ui/: actions.rs  hotkey.rs  launch_at_login.rs  menubar.rs  mod.rs  popup.rs  statusbar.rs
tests/: README.md  test_clipboard_monitoring.rs  test_image_processing.rs  test_search_engine.rs  test_sensitive_detection.rs  test_storage_integration.rs
